# ml-sentiment-app-cicd-

./: .dockerignore  .gitignore  Dockerfile  README.md  TASKS.md  pyproject.toml  requirements.txt
.gitea/workflows/: ci.yml
src/: __init__.py  inference.py  model.py  preprocess.py
tests/: test_inference.py  test_model.py  test_preprocess.py
